--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,9 +13,11 @@ body {
   top: 5%;
   width: 40%;
   height: 70vh;
+  user-select: none;
   border: 1.5vh double black;
   border-radius: 10%;
-  background-color: white;
+  background-color: rgb(248, 241, 144);
+  box-shadow: 0 0.1vh 3vh 0 black, 0 0.1vh 0.5vh 0 black;
 }
 
 #titlecalc {
@@ -25,12 +27,10 @@ body {
   align-items: center;
   width: 100%;
   height: 15vh;
-  user-select: none;
-  background-color: red;
 }
 
 p {
-  font: bold 3vw sans-serif;
+  font: bold 4vw sans-serif;
 }
 
 @media(max-width: 800px) {
@@ -45,6 +45,54 @@ p {
   textarea {
     font: bold 5vw sans-serif !important;
   }
+
+  .buttonsnumber {
+    font: bold 6vw sans-serif !important;
+  }
+
+  .buttonscalculations {
+    font: bold 6vw sans-serif !important;
+  }
+}
+
+@media(max-width: 800px) and (max-height: 600px) {
+  textarea {
+    font: bold 3vw sans-serif !important;
+  }
+
+  .buttonsnumber {
+    font: bold 3vw sans-serif !important;
+  }
+
+  .buttonscalculations {
+    font: bold 3vw sans-serif !important;
+  }
+}
+
+@media(max-height: 600px) and (min-width: 1000px) {
+  textarea {
+    font: bold 1.5vw sans-serif !important;
+  }
+
+  .buttonsnumber {
+    font: bold 2vw sans-serif !important;
+  }
+
+  .buttonscalculations {
+    font: bold 2vw sans-serif !important;
+  }
+}
+
+hr {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  top: 33%;
+  height: 0.5vh;
+  border: 0.1vh solid black;
+  background-color: black;
 }
 
 #displayer {
@@ -55,7 +103,6 @@ p {
   top: 20%;
   width: 100%;
   height: 10vh;
-  background-color: red;
 }
 
 textarea {
@@ -70,4 +117,60 @@ textarea {
   overflow: hidden;
   border: 0.7vh solid black;
   background-color: rgb(203, 240, 255);
+}
+
+#mainbuttonsnumber {
+  position: absolute;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  top: 40%;
+  left: 4%;
+  width: 50%;
+  height: 40vh;
+}
+
+.buttonsnumber {
+  position: relative;
+  width: 30%;
+  height: 11vh;
+  transition-duration: 0.4s;
+  font: bold 3vw sans-serif;
+  border: 0.5vh solid black;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: rgb(171, 231, 255);
+  box-shadow: 0 0.1vh 3vh 0 black, 0 0.1vh 0.5vh 0 black;
+}
+
+button:active {
+  cursor: pointer;
+  transition-duration: 0s;
+  border: 1vh solid black;
+  background-color: rgb(248, 241, 144);
+  box-shadow: 0 0.1vh 3vh 0 black, 0 0.1vh 0.5vh 0 black;
+}
+
+#mainbuttonscalculations {
+  position: absolute;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  top: 40%;
+  right: 4%;
+  width: 35%;
+  height: 40vh;
+}
+
+.buttonscalculations {
+  position: relative;
+  width: 42%;
+  height: 11vh;
+  transition-duration: 0.4s;
+  font: bold 3vw sans-serif;
+  border: 0.5vh solid black;
 }
