--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,14 @@
+* {
+  margin: 0;
+  padding: 0;
+  user-select: none;
+  overflow: hidden;
+}
+
 body {
   display: flex;
 	justify-content: center;
   align-items: center;
-  overflow: hidden;
   background-color: rgb(203, 240, 255);
 }
 
@@ -13,7 +19,6 @@ body {
   top: 5%;
   width: 40%;
   height: 70vh;
-  user-select: none;
   border: 1.5vh double black;
   border-radius: 10%;
   background-color: rgb(248, 241, 144);
