refactor: cleaning code

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -137,20 +137,12 @@ button {
     width: 70% !important;
   }
 
-  p {
+  p, .buttonsnumber, .buttonscalculations {
     font: bold 6vw sans-serif !important;
   }
   
   textarea {
     font: bold 5vw sans-serif !important;
-  }
-
-  .buttonsnumber {
-    font: bold 6vw sans-serif !important;
-  }
-
-  .buttonscalculations {
-    font: bold 6vw sans-serif !important;
   }
 }
 
