refactor: cleaning code

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -157,11 +157,7 @@ button {
     font: bold 1.5vw sans-serif !important;
   }
 
-  .buttonsnumber {
-    font: bold 2vw sans-serif !important;
-  }
-
-  .buttonscalculations {
+  .buttonsnumber, .buttonscalculations {
     font: bold 2vw sans-serif !important;
   }
 }
