--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,10 +24,10 @@ body {
   top: 5%;
   width: 40%;
   height: 70vh;
-  border: 1.5vh double black;
+  border: 1.5vh double $first-color;
   border-radius: 10%;
   background-color: rgb(248, 241, 144);
-  box-shadow: 0 0.1vh 3vh 0 black, 0 0.1vh 0.5vh 0 black;
+  box-shadow: 0 0.1vh 3vh 0 $first-color, 0 0.1vh 0.5vh 0 $first-color;
 }
 
 #titlecalc {
@@ -51,8 +51,8 @@ hr {
   width: 100%;
   top: 33%;
   height: 0.5vh;
-  border: 0.1vh solid black;
-  background-color: black;
+  border: 0.1vh solid $first-color;
+  background-color: $first-color;
 }
 
 #displayer {
@@ -75,7 +75,7 @@ textarea {
   resize: none;
   font: bold 2.5vw sans-serif;
   overflow: hidden;
-  border: 0.7vh solid black;
+  border: 0.7vh solid $first-color;
   background-color: rgb(203, 240, 255);
 }
 
@@ -97,22 +97,22 @@ textarea {
   height: 11vh;
   transition-duration: 0.4s;
   font: bold 3vw sans-serif;
-  border: 0.5vh solid black;
+  border: 0.5vh solid $first-color;
 }
 
 button {
   &:hover {
     cursor: pointer;
     background-color: rgb(171, 231, 255);
-    box-shadow: 0 0.1vh 3vh 0 black, 0 0.1vh 0.5vh 0 black;
+    box-shadow: 0 0.1vh 3vh 0 $first-color, 0 0.1vh 0.5vh 0 $first-color;
   }
   
   &:active {
     cursor: pointer;
     transition-duration: 0s;
-    border: 1vh solid black;
+    border: 1vh solid $first-color;
     background-color: rgb(248, 241, 144);
-    box-shadow: 0 0.1vh 3vh 0 black, 0 0.1vh 0.5vh 0 black;
+    box-shadow: 0 0.1vh 3vh 0 $first-color, 0 0.1vh 0.5vh 0 $first-color;
   }
 }
 
@@ -134,7 +134,7 @@ button {
   height: 11vh;
   transition-duration: 0.4s;
   font: bold 3vw sans-serif;
-  border: 0.5vh solid black;
+  border: 0.5vh solid $first-color;
 }
 
 @media(max-width: 800px) {
