--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,15 +6,14 @@
 }
 
 $first-color: black;
-$second-color: white;
-$third-color: rgb(203, 240, 255);
-$fourth-color: rgb(248, 241, 144);
+$second-color: rgb(203, 240, 255);
+$third-color: rgb(248, 241, 144);
 
 body {
   display: flex;
 	justify-content: center;
   align-items: center;
-  background-color: rgb(203, 240, 255);
+  background-color: $second-color;
 }
 
 #main {
@@ -76,7 +75,7 @@ textarea {
   font: bold 2.5vw sans-serif;
   overflow: hidden;
   border: 0.7vh solid $first-color;
-  background-color: rgb(203, 240, 255);
+  background-color: $second-color;
 }
 
 #mainbuttonsnumber {
@@ -103,7 +102,7 @@ textarea {
 button {
   &:hover {
     cursor: pointer;
-    background-color: rgb(171, 231, 255);
+    background-color: $second-color;
     box-shadow: 0 0.1vh 3vh 0 $first-color, 0 0.1vh 0.5vh 0 $first-color;
   }
   
