--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,7 +25,7 @@ body {
   height: 70vh;
   border: 1.5vh double $first-color;
   border-radius: 10%;
-  background-color: rgb(248, 241, 144);
+  background-color: $third-color;
   box-shadow: 0 0.1vh 3vh 0 $first-color, 0 0.1vh 0.5vh 0 $first-color;
 }
 
@@ -110,7 +110,7 @@ button {
     cursor: pointer;
     transition-duration: 0s;
     border: 1vh solid $first-color;
-    background-color: rgb(248, 241, 144);
+    background-color: $third-color;
     box-shadow: 0 0.1vh 3vh 0 $first-color, 0 0.1vh 0.5vh 0 $first-color;
   }
 }
